--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 		<div id="container"></div>
 		<div id="info"><a href="http://threejs.org" target="_blank">three.js</a> - earth demo</div>
 
-		<script src="../build/three.min.js"></script>
-		<script src="js/libs/stats.min.js"></script>
+		<script src="/build/three.min.js"></script>
+		<script src="/libs/stats.min.js"></script>
 
 		<script>
 
