--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 		<div id="container"></div>
 		<div id="info"><a href="http://threejs.org" target="_blank">three.js</a> - earth demo</div>
-
+		<script src="/build/orbit.js"></script>
 		<script src="/build/three.min.js"></script>
 		<script src="/libs/stats.min.js"></script>
 
