changed module to use CDN instead of self hosted install

--- a/index.html
+++ b/index.html
@@ -33,11 +33,19 @@
 
 		<div id="container"></div>
 		<div id="info"><a href="http://threejs.org" target="_blank">three.js</a> - earth demo</div>
-		<script src="/build/orbit.js"></script>
-		<script src="/build/three.min.js"></script>
-		<script src="/libs/stats.min.js"></script>
+		<!-- <script src="/build/three.min.js"></script>
+		<script src="/libs/stats.min.js"></script> -->
+		<!-- <script type="module">
+	    	import * as THREE from 'https://unpkg.com/three/build/three.module.js';
+		</script>
+		<script type="module">
+			import { OrbitControls } from 'https://unpkg.com/three/examples/jsm/controls/OrbitControls.js';
 
-		<script>
+		</script> -->
+
+		<script type="module">
+			import * as THREE from 'https://unpkg.com/three/build/three.module.js';
+			import { OrbitControls } from 'https://unpkg.com/three/examples/jsm/controls/OrbitControls.js';
 
 			var container, stats;
 			var camera, scene, renderer;
