--- a/index.html
+++ b/index.html
@@ -69,43 +69,12 @@
 
 					var geometry = new THREE.SphereGeometry( 200, 20, 20 );
 
-					var material = new THREE.MeshBasicMaterial( { map: texture, overdraw: 0.5 } );
+					var material = new THREE.MeshBasicMaterial( { map: texture } );
 					var mesh = new THREE.Mesh( geometry, material );
 					group.add( mesh );
 
 				} );
 
-				// shadow
-
-				// var canvas = document.createElement( 'canvas' );
-				// canvas.width = 128;
-				// canvas.height = 128;
-
-				// var context = canvas.getContext( '2d' );
-				// var gradient = context.createRadialGradient(
-				// 	canvas.width / 2,
-				// 	canvas.height / 2,
-				// 	0,
-				// 	canvas.width / 2,
-				// 	canvas.height / 2,
-				// 	canvas.width / 2
-				// );
-				// gradient.addColorStop( 0.1, 'rgba(210,210,210,1)' );
-				// gradient.addColorStop( 1, 'rgba(255,255,255,1)' );
-
-				// context.fillStyle = gradient;
-				// context.fillRect( 0, 0, canvas.width, canvas.height );
-
-				// var texture = new THREE.Texture( canvas );
-				// texture.needsUpdate = true;
-
-				// var geometry = new THREE.PlaneGeometry( 300, 300, 3, 3 );
-				// var material = new THREE.MeshBasicMaterial( { map: texture, overdraw: 0.5 } );
-
-				// var mesh = new THREE.Mesh( geometry, material );
-				// mesh.position.y = - 250;
-				// mesh.rotation.x = - Math.PI / 2;
-				// group.add( mesh );
 
 				renderer = new THREE.WebGLRenderer( { antialias: true } );
 				renderer.setClearColor( 0x333333 );
@@ -126,7 +95,6 @@
 				stats.domElement.style.top = '0px';
 				container.appendChild( stats.domElement );
 
-				// document.addEventListener( 'mousemove', onDocumentMouseMove, false );
 
 				//
 
@@ -146,14 +114,6 @@
 
 			}
 
-			// function onDocumentMouseMove( event ) {
-
-			// 	mouseX = ( event.clientX - windowHalfX );
-			// 	mouseY = ( event.clientY - windowHalfY );
-
-			// }
-
-			//
 
 			function animate() {
 
@@ -166,8 +126,6 @@
 
 			function render() {
 
-				camera.position.x += ( mouseX - camera.position.x ) * 0.05;
-				camera.position.y += ( - mouseY - camera.position.y ) * 0.05;
 				camera.lookAt( scene.position );
 
 				// group.rotation.y -= 0.005;
