--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<body>
 
 		<div id="container"></div>
-		<div id="info"><a href="http://threejs.org" target="_blank">three.js</a> - earth demo</div>
+		<div id="info"><a href="http://threejs.org" target="_blank">three.js</a> - AS graph visualisation</div>
 
 		<script type="module">
 			import * as THREE from 'https://unpkg.com/three@0.125.2/build/three.module.js';
@@ -65,7 +65,7 @@
 				// earth
 
 				var loader = new THREE.TextureLoader();
-				loader.load( 'textures/centroid_visualisation.png', function ( texture ) {
+				loader.load( 'textures/centroid_visualisation.jpg', function ( texture ) {
 
 					var geometry = new THREE.SphereGeometry( 200, 64, 64 );
 
