--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 		    <div class="splash" id="introduction">
 		        <h1 class="splash-head">Map of the Internet</h1>
 		        <p class="splash-subhead">
-		            You can find the controls to the visualisation in the top right corner. Hover over the about section and scroll down to see an overview of what is represented on the map. 
+		            You can find the controls to the visualisation in the top right corner. When changing configuration, please give the page some time to load the new map. Hover over the about section and scroll down to see an overview of what and how things are represented on the map. 
 		        </p>
 		        <p>
-		            <a onclick="removeintro()" class="pure-button pure-button-primary">Get Started</a>
+		            <a onclick="removeintro()" class="pure-button pure-button-primary">Explore!</a>
 		        </p>
 		    </div>
 		</div>
@@ -48,38 +48,34 @@
 		            <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
 
 		                <h3 class="content-subhead">
-		                    <i class="fa fa-rocket"></i>
-		                    Get Started Quickly
+		                    Points
 		                </h3>
 		                <p>
-		                    Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
+		                    Each point represents an Autonomous System - a network of addresses (i.e. an Internet Service Provider, a big company etc.). The colour of the point represents the network's relative importance, with pink being a busy central network that serves as a connecting point to a lot of other networks and cyan being relatively quiet networks with little to no information passing through (other than their own).
 		                </p>
 		            </div>
 		            <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
 		                <h3 class="content-subhead">
-		                    <i class="fa fa-mobile"></i>
-		                    Responsive Layouts
+		                    Lines
 		                </h3>
 		                <p>
-		                    Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
+		                    Each line represents a connection between two networks, if there is a line, that means that traffic may take that path along a longer journey. Individual lines are semi-transparent, hence the places where they are fully visible are busy junctions of the Internet. 
 		                </p>
 		            </div>
 		            <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
 		                <h3 class="content-subhead">
-		                    <i class="fa fa-th-large"></i>
-		                    Modular
+		                    Settings
 		                </h3>
 		                <p>
-		                    Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
+		                    The settings allow you to tweak several things. You may switch between the available dates to observe how the networks developed in time. You can also try comparing the IPv4 and IPv6 networks. Furthermore if you are mostly interested in the networks and their locations instead of the connections, there is an additional edges option that allows you to view only the networks (points). 
 		                </p>
 		            </div>
 		            <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
 		                <h3 class="content-subhead">
-		                    <i class="fa fa-check-square-o"></i>
-		                    Plays Nice
+		                    Detailed Information
 		                </h3>
 		                <p>
-		                    Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.
+		                    A full length explanation and an overview of how this visualisation was created is available in my dissertation. I will add it here when I am allowed to for anyone who is interested. 
 		                </p>
 		            </div>
 		        </div>
@@ -91,13 +87,16 @@
 		        </div> -->
 		        <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-3-5">
 
-		            <h2 class="content-head content-head-ribbon">Laboris nisi ut aliquip.</h2>
+		            <h2 class="content-head content-head-ribbon">Acknowledgements</h2>
 
 		            <p>
-		                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		                consequat. Duis aute irure dolor.
+		                This visualisation uses <a href="https://dev.maxmind.com/geoip/geoip2/geolite2/"> GeoLite2 by MaxMind </a> to geolocate the networks. 
+		            </p>
+		            <p>
+		                This page is based on the landing page layout from <a href="https://purecss.io/">purecss.io</a>
+		            </p>
+		            <p>
+		                The rendering is made possible by <a href="threejs.org">three.js</a>
 		            </p>
 		        </div>
 		    </div>
