reworked some descriptions, fixed minor visual bugs

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		    <div class="splash" id="introduction">
 		        <h1 class="splash-head">Map of the Internet</h1>
 		        <p class="splash-subhead">
-		            You can find the controls to the visualisation in the top right corner. When changing configuration, please give the page some time to load the new map. Hover over the about section and scroll down to see an overview of what and how things are represented on the map. 
+		            You can find the controls to the visualisation in the top right corner. Hover over the about section and scroll down to see an overview of what and how things are represented on the map. 
 		        </p>
 		        <p>
 		            <a onclick="removeintro()" class="pure-button pure-button-primary">Explore!</a>
@@ -59,7 +59,7 @@
 		                    Lines
 		                </h3>
 		                <p>
-		                    Each line represents a connection between two networks, if there is a line, that means that traffic may take that path along a longer journey. Individual lines are semi-transparent, hence the places where they are fully visible are busy junctions of the Internet. 
+		                    Each line represents a connection between two networks, if there is a line, that means that traffic may take that path along a longer journey. Individual lines are semi-transparent, hence the places where they are fully visible are busy junctions of the Internet. Do note that IPv6 lines are less transparent in order for you to be able to see them on the maps.
 		                </p>
 		            </div>
 		            <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
