--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 		<div class="content-wrapper">
 		    <div class="content brightribbon">
-		        <h2 class="content-head is-center">vvv Map information vvv</h2>
+		        <h2 class="content-head is-center">vvv About Map & More vvv</h2>
 
 		        <div class="pure-g">
 		            <div class="l-box pure-u-1 pure-u-md-1-2 pure-u-lg-1-4">
@@ -75,8 +75,39 @@
 		                    Detailed Information
 		                </h3>
 		                <p>
-		                    A full length explanation and an overview of how this visualisation was created is available in my dissertation. I will add it here when I am allowed to for anyone who is interested. 
+		                    A full length explanation and an overview of how this visualisation was created is available in my dissertation. It will be added here later.
 		                </p>
+		            </div>
+		        </div>
+		    </div>
+
+		    <div class="content ribbon">
+		        <h2 class="content-head content-head-ribbon is-center">Other Visualisations</h2>
+		        <h4 class="content-subhead is-center">
+		                    Note that the visualisations also change using the controls for the 3D visualisation.
+		        </h4>
+
+		        <div class="pure-g">
+		            <div class="l-box pure-u-1 pure-u-md-1-2">
+
+		                <h3 class="content-subhead">
+		                    CAIDA-style visualisation
+		                </h3>
+		                <p>
+		                    This visualisation uses the same data as the main visualisation, however it plots it using a different style. Here the angle from the centre is the longitude of where the network is located, however the distance from the centre represents how important the network is. When a network is close to the centre it means that many networks use it to communicate through - the more central it is. 
+		                </p>
+		                <a href = "/textures/2020_12_08/ipv4_caida_plot.png" id="caidalink"><img alt="CAIDA-style visualisation" class="pure-img-responsive" src="/textures/2020_12_08/ipv4_caida_plot.png" id="caidafile" loading=lazy></a>
+
+		            </div>
+
+		            <div class="l-box pure-u-1 pure-u-md-1-2">
+		                <h3 class="content-subhead">
+		                    Azimuthal projection of the map
+		                </h3>
+		                <p>
+		                    This visualisation is just a flattened version of the main three dimensional visualisation. The same explanations from the about section apply here. We use the Azimuthal projection to get this flat representation of earth. Click to view the full resolution image.
+		                </p>
+	                	<a href="/textures/2020_12_08/ipv4_azimuthal.png" id="azimuthallink"><img alt="Azimuthal projection" class="pure-img-responsive" src="/textures/2020_12_08/ipv4_azimuthal.png" id="azimuthalfile" loading=lazy></a>
 		            </div>
 		        </div>
 		    </div>
@@ -214,6 +245,16 @@
 					    //Download Progress
 					    console.log((xhr.loaded / xhr.total) * 100 + "% loaded");
 					} );
+
+					var caidalink = document.getElementById("caidalink").setAttribute("href", ['./textures/', params.date, ver, "caida_plot.png"].join(''));
+					var caidafile = document.getElementById("caidafile").setAttribute("src", ['./textures/', params.date, ver, "caida_plot.png"].join(''));
+
+
+
+					var azimuthallink = document.getElementById("azimuthallink").setAttribute("href", ['./textures/', params.date, ver, "azimuthal.png"].join(''));
+					var azimuthalfile = document.getElementById("azimuthalfile").setAttribute("src", ['./textures/', params.date, ver, "azimuthal.png"].join(''));
+
+
 				}
 
 				//
