removed scroll block, overhauled explanations

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 		                    CAIDA-style visualisation
 		                </h3>
 		                <p>
-		                    This visualisation uses the same data as the main visualisation, however it plots it using a different style. Here the angle from the centre is the longitude of where the network is located, however the distance from the centre represents how important the network is. When a network is close to the centre it means that many networks use it to communicate through - the more central it is. 
+		                    This visualisation uses the same data as the main visualisation, however it plots it using a different style. Here the angle from the centre is the longitude of where the network is located, however the distance from the centre represents how important the network is. When a network is close to the centre it means that many networks use it to communicate through - the more central it is. See the original by CAIDA <a href=https://www.caida.org/research/topology/as_core_network/2017>here</a>. 
 		                </p>
 		                <a href = "/textures/2020_12_08/ipv4_caida_plot.png" id="caidalink"><img alt="CAIDA-style visualisation" class="pure-img-responsive" src="/textures/2020_12_08/ipv4_caida_plot.png" id="caidafile" loading=lazy></a>
 
@@ -105,7 +105,7 @@
 		                    Azimuthal projection of the map
 		                </h3>
 		                <p>
-		                    This visualisation is just a flattened version of the main three dimensional visualisation. The same explanations from the about section apply here. We use the Azimuthal projection to get this flat representation of earth. Click to view the full resolution image.
+		                    This visualisation is just a flattened version of the main three dimensional visualisation. The same explanations from the about section apply here. We use the Azimuthal projection to get this flat representation of earth, however the lines follow the <a href="https://en.wikipedia.org/wiki/Great-circle_distance">great circles</a>. Click to view the full resolution image.
 		                </p>
 	                	<a href="/textures/2020_12_08/ipv4_azimuthal.png" id="azimuthallink"><img alt="Azimuthal projection" class="pure-img-responsive" src="/textures/2020_12_08/ipv4_azimuthal.png" id="azimuthalfile" loading=lazy></a>
 		            </div>
